--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ nav>ul>li>a:hover{
 }
 section{
     min-height: 100vh;
-    padding: 10rem 9% 2rem;
+    padding: 7rem 7% 1rem;
 
 }
 .home{
@@ -62,8 +62,8 @@ span{
 }
 .home-page>p{
     color: white;
-    font-size: 2rem;
-    font-weight: 300;
+    font-size: 1.5rem;
+    font-weight: 200;
 }
 
 .home-image>img{
@@ -117,7 +117,8 @@ span{
 
 /*services section*/
 .services>h2{
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
+    font-size: 3rem;
     color: white;
 }
 .service-box{
@@ -129,26 +130,32 @@ span{
     color: white;
 }
 .service-box .box{
-    flex: 2 2 20rem;
+    flex: 1 1 10rem;
     background: black;
-    padding: 3rem 3rem 3rem;
+    padding: 3rem 2rem 4rem;
     border-radius: 2rem;
     text-align: center;
-    border: .2rem solid darkgray;
+    border: .2rem solid orange;
+    transition: .5s ease;
 
 }
+.service-box .box:hover{
+    border-color: orange;
+    transform: scale(1.09);
+}
+.box>i{
+    font-size: 7rem;
+    color: white;
+}
 .box>h3{
-    font-size: 2.6rem;
+    font-size: 2rem;
 }
 .box>p{
-    font-size: 1.6rem;
+    font-size: 1rem;
     margin: 1rem 0 3rem;
 }
 
 /*Project section*/
-.projects{
-    background: black;
-}
 .projects>h2{
     margin-bottom: 4rem;
     font-size: 3rem;
@@ -165,6 +172,11 @@ span{
     border-radius: 2rem;
     overflow: hidden;
     display: flex;
+    transition: ease;
+}
+.project-box .p-box:hover{
+    border-color: orange;
+    transform: scale(1.09);
 }
 .p-box>img{
     width: 100%;
@@ -175,5 +187,143 @@ span{
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+}
+
+.content>h4{
+    font-size: 3rem;
+}
+.content>p{
+    font-size: 1rem;
+    margin: .3rem 0 1rem;
+}
+
+/*Assignment section*/
+.assignment>h2{
+    margin-bottom: 4rem;
+    font-size: 3rem;
+    color: white;
+}
+.assignment-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    color: white;
+}
+.assignment-box .ass-box{
+    flex: 1 1 8rem;
+    background: black;
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid orange;
+
+}
+.ass-box>i{
+    font-size: 7rem;
+    color: white;
+}
+.ass-box>h3{
+    font-size: 2.5rem;
+}
+.ass-box>p{
+    font-size: 1rem;
+    margin: 1rem 0 3rem;
+}
+
+/*skills section*/
+.skills{
+    background: black;
+}
+.skills>h2{
+    margin-bottom: 4rem;
+    font-size: 3rem;
+    color: white;
+}
+
+
+/*contact section*/
+.contact{
+    background: black;
+}
+.contact>h2{
+    margin-bottom: 3rem;
+    font-size: 3rem;
+    color: white;
+}
+
+.contact>form{
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contact>form .input-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact>form .input-box>input{
+    width: 100%;
+    padding: 1rem;
+    font-size: 1rem;
+    color: black;
+    background: white;
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+.contact>form>textarea{
+    width: 100%;
+    padding: 1rem;
+    font-size: 1rem;
+    color: black;
+    background: white;
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+.contact>form .input-box>input{
+    width: 49%;
+}
+.content>form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
+}
+/*gallery section*/
+.gallery>h2{
+    margin-bottom: 4rem;
+    font-size: 3rem;
+    color: orange;
+}
+
+/*footer section*/
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: orange;
+
+}
+.footer-text>p{
+    font-size: 1.6rem;
+}
+
+.footer_icon>a{
+    display: inline-flex;
+    justify-content: center;
+    padding: 8rem;
+    background: orange;
+    border-radius: .8rem;
 
 }
